# gender-theory

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  webpack.config.js
app/: .gitignore  Cargo.toml
app/src/: lib.rs  model.rs  words.rs
app/src/scenes/: for_against.rs  mod.rs  terra_firmament.rs
src/: lib.rs  main.rs  model.rs  notes.rs  words.rs
src/scenes/: for_against.rs  mod.rs  terra_firmament.rs
static/: index.html
