# You must change these to your own details.
[package]
name = "gender-theory-server"
description = "template repository to run nannou app both in native app and web browser."
version = "0.0.1"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
resolver = "2"

[dependencies]
actix-files = "^0.6.2"
actix-web = "^4.2.1"
env_logger = "^0.10.0"
log = "^0.4.17"
